# CraftMine

./: .gitignore  .gitmodules  CMakeLists.txt  gitignore  readme.md
include/glad/: glad.c  glad.h
include/glfw-3.3.9/: README.md
include/glfw-3.3.9/docs/: Doxyfile.in  build.dox  compile.dox  context.dox  header.html  input.dox  internal.dox  intro.dox  main.dox  monitor.dox  moving.dox  news.dox  quick.dox  window.dox
include/glfw-3.3.9/docs/html/: build_8dox.html  build_guide.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  deprecated.html  dir_08423ce7729c4554356a7de7171ba263.html  dir_2dcebcdf14b42e92a6ed85c61bda6b9d.html  dir_62ce056722ee97c199075aa1d6eca309.html  dir_dddf4cf62655095a666cf715de3a31a2.html  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  group__buttons.html  group__context.html  group__errors.html  group__gamepad__axes.html  group__gamepad__buttons.html  group__hat__state.html  group__init.html  group__input.html  group__joysticks.html  group__keys.html  group__mods.html  group__monitor.html  group__native.html  group__shapes.html  group__vulkan.html  group__window.html  index.html  input_8dox.html  input_guide.html  internal_8dox.html  internals_guide.html  intro_8dox.html  (+20 more)
include/glfw-3.3.9/include/GLFW/: glfw3.h  glfw3native.h
include/glfw-3.3.9/src/: mappings.h.in  monitor.c  osmesa_context.c
include/glfw/include/GLFW/: glfw3.h
include/glm/ext/: matrix_clip_space.hpp  matrix_clip_space.inl  matrix_projection.hpp
include/glm/gtc/: integer.hpp
include/glm/gtx/: io.hpp  io.inl  texture.hpp  wrap.hpp
include/stb/: stb_image.h
resources/shader/: OutlineShader.fs  OutlineShader.vs  UIShader.fs  UIShader.vs  crosshair.fs  crosshair.vs  framebuffer.fs  framebuffer.vs  gShader.fs  gShader.vs  itemUI.fs  itemUI.vs  playerBox.fs  playerBox.vs  shader.fs  shader.vs  shadowMap.fs  shadowMap.gs  shadowMap.vs  text.fs  text.vs  transparent.fs  transparent.vs  transparentShader.fs  transparentShader.vs
src/: Camera.cpp  Camera.h  Game.cpp  Game.h  Main.cpp  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h
src/Graphics/: Crosshair.cpp  Crosshair.h  CursorBlock.cpp  CursorBlock.h  FBO.cpp  FBO.h  IBO.cpp  IBO.h  Mesh.cpp  Mesh.h  PlayerBoxRenderer.cpp  PlayerBoxRenderer.h  ScreenQuad.cpp  ScreenQuad.h  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  TextureData.cpp  TextureData.h  Toolbar.cpp  Toolbar.h  UBO.cpp  UBO.h  UI.cpp  UI.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/Input/: Camera.cpp  Camera.h  Input.cpp  Input.h  MouseInput.cpp  MouseInput.h
src/Network/: NetworkClient.cpp  NetworkClient.h  PacketTypes.h
src/Player/: Chat.cpp  Chat.h  Crosshair.cpp  Crosshair.h  Inventory.cpp  Inventory.h  Player.cpp  Player.h  RemotePlayer.h  Toolbar.cpp  Toolbar.h
src/World Gen/: Block.cpp  Block.h  BlockData.cpp  BlockData.h  Chunk.cpp  Chunk.h  ChunkGeneration.cpp  ChunkGeneration.h  ChunkLighting.cpp  ChunkLighting.h  ChunkMeshGeneration.cpp  ChunkMeshGeneration.h  Frustum.cpp  Frustum.h  World.cpp  World.h  WorldThreading.cpp  WorldThreading.h
src/WorldGen/: Block.cpp  Block.h  BlockData.cpp  Chunk.cpp  Chunk.h  ChunkGeneration.cpp  ChunkGeneration.h  ChunkMeshGeneration.cpp  ChunkMeshGeneration.h  Frustum.h  World.cpp  World.h  WorldThreading.cpp  WorldThreading.h
